# golden_ratio_nets

./: (t s) sequence.py  3d construction.py  Alternative Bases Discrepancy.py  Antichain load.py  Antichains.py  Base 2 Hammersley.py  Base 2 Hammersley.txt  Best Point Sets.py  Boolean array.py  Check Formula for Discrepancy 2.py  Check Formula for Discrepancy.py  Check equidistribution of scrambling.py  Check scramble equidistribution.py  Counting all nets and the distribution of points.py  Cyclic shift point set.py  Cython Hello World.py  Digits in common scramble 2.py  Digits in common scramble 3.py  Digits in common scramble.py  Golden Lattice.py  Golden Ratio Nets Alternate Matricies.py  Golden Ratio Nets CP.py  Golden Ratio Nets L2 Discrepancy Version 2.py  Golden Ratio Nets L2 Discrepancy.py  Golden Ratio Nets Matrix Construction.py  Golden Ratio Nets Modified Hammersley.py  Golden Ratio Nets NP 2.py  Golden Ratio Nets NP Numba.py  Golden Ratio Nets NP.py  Golden Ratio Nets.py  Greedy Ordering of Sequence.py  Haar functions.py  Irrational Halton Sequences.py  Kronecker.py  L2 star Discrepancy Scrambled Sequence 2.csv  L2 star Discrepancy Scrambled Sequence.csv  L2 star discrepancy test.py  L2_star_discrepancy.npy  Lucas Number Sequence.py  NUMBA  CUDA Test.py  (+31 more)
DEM/: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
DEM/apps/: sdiscr_bz.c  sdiscr_dem.c  sdiscr_dem_parallel.c  sdiscr_pointset.c  sdiscr_simple.c
DEM/bench/: .gitignore  bench_dem.bash  plot_dem.R  table_dem.R
DEM/include/sdiscr/: sdiscr_bz.h  sdiscr_dem.h  sdiscr_dem_parallel.h  sdiscr_log.h  sdiscr_pointset.h  sdiscr_simple.h  sdiscr_utils.h
DEM/original/: .gitignore  Makefile  README.TXT  bz_discr.h  bz_main.c  dem_discr.c  dem_main.c  simple_discr.c  simple_main.c
DEM/src/: sdiscr_bz.c  sdiscr_dem.c  sdiscr_dem_parallel.c  sdiscr_pointset.c  sdiscr_simple.c  sdiscr_utils.c
DEM/test/golden_tests/: gen_data.py  gen_outputs.py  test_executable.py
DEM/test/golden_tests/data/: data_02_0005_halton.txt  data_02_0005_niederreiter.txt  data_02_0005_reversehalton.txt  data_02_0005_sobol.txt  data_02_0020_halton.txt  data_02_0020_niederreiter.txt  data_02_0020_reversehalton.txt  data_02_0020_sobol.txt  data_02_0050_halton.txt  data_02_0050_niederreiter.txt  data_02_0050_reversehalton.txt  data_02_0050_sobol.txt  data_02_0100_halton.txt  data_02_0100_niederreiter.txt  data_02_0100_reversehalton.txt  data_02_0100_sobol.txt  data_02_0200_halton.txt  data_02_0200_niederreiter.txt  data_02_0200_reversehalton.txt  data_02_0200_sobol.txt  data_03_0005_halton.txt  data_03_0005_niederreiter.txt  data_03_0005_reversehalton.txt  data_03_0005_sobol.txt  data_03_0020_halton.txt  data_03_0020_niederreiter.txt  data_03_0020_reversehalton.txt  data_03_0020_sobol.txt  data_03_0050_halton.txt  data_03_0050_niederreiter.txt  data_03_0050_reversehalton.txt  data_03_0050_sobol.txt  data_03_0080_halton.txt  data_03_0080_niederreiter.txt  data_03_0080_reversehalton.txt  data_03_0080_sobol.txt  data_04_0005_halton.txt  data_04_0005_niederreiter.txt  data_04_0005_reversehalton.txt  data_04_0005_sobol.txt  (+54 more)
Golden Ratio Sequence/: New Sequence Construction multiplication mod f.py  New Sequence Construction.py  Plots.py  van der Corput scramble.py
Scrabling Cython/: scrambling experiments.py  scrambling_library.c  scrambling_library.cp39-win_amd64.pyd  scrambling_library.pyx  setup.py  setup.py.py
Square_root_of_2/: Brute Force net creation.py  Collect data from discrepancy calculation.py  Exploration of square root of 2.py  General irrational Hammersley sets.py  Histogram Scrambling.py  Most General Irrational Hammersley Sets Discrepancy 2023.py  Most General Irrational Hammersley Sets.py  Negative Base.py  Scramble Irrational Hammersley Sets.py  Test Equidistribution 2.py  Test Equidistribution t value.py  Test Equidistribution.py  discrepancies.c  discrepancies.cp310-win_amd64.pyd  one dimension to two.py  results.txt  scramble sqrt 2 extra.py  setup.py
